#10896 SCSS - text editor

--- a/src/main/resources/public/template/formDesigner/fragments/formHead.html
+++ b/src/main/resources/public/template/formDesigner/fragments/formHead.html
@@ -19,6 +19,7 @@
     <script th:src="@{/assets/vendors/piklor/piklor.js}"></script>
     <script th:src="@{/assets/js/lib/zColorPalette.js}"></script>
     <script th:src="@{/assets/vendors/quill/quill.js}"></script>
+    <script th:src="@{/assets/vendors/quill/quill.custom.js}"></script>
     <script th:src="@{/assets/vendors/dropzone/dropzone.js}"></script>
     <script th:src="@{/assets/vendors/overlayScrollbars/OverlayScrollbars.js}"></script>
     <script th:src="@{/assets/vendors/tagify/tagify.js}"></script>
