--- a/src/main/resources/public/template/layout/fragments/commonHead.html
+++ b/src/main/resources/public/template/layout/fragments/commonHead.html
@@ -21,6 +21,7 @@
     <script th:src="@{/assets/vendors/dropzone/dropzone.js}"></script>
     <script th:src="@{/assets/js/lib/zFileuploader.js}"></script>
     <script th:src="@{/assets/vendors/quill/quill.js}"></script>
+    <script th:src="@{/assets/vendors/quill/quill.custom.js}"></script>
     <script th:src="@{/assets/vendors/toastify/toastify.custom.js}"></script>
     <script th:src="@{/assets/vendors/overlayScrollbars/OverlayScrollbars.js}"></script>
     <script th:src="@{/assets/js/lib/zValidation.legacy.js}"></script>
