--- a/src/main/resources/public/template/layout/fragments/commonPortalHead.html
+++ b/src/main/resources/public/template/layout/fragments/commonPortalHead.html
@@ -18,6 +18,7 @@
     <script th:src="@{/assets/vendors/dropzone/dropzone.js}"></script>
     <script th:src="@{/assets/js/lib/zFileuploaderPortal.js}"></script>
     <script th:src="@{/assets/vendors/quill/quill.js}"></script>
+    <script th:src="@{/assets/vendors/quill/quill.custom.js}"></script>
     <script th:src="@{/assets/vendors/toastify/toastify.custom.js}"></script>
     <script th:src="@{/assets/vendors/overlayScrollbars/OverlayScrollbars.js}"></script>
     <script th:src="@{/assets/js/lib/zValidation.legacy.js}"></script>
