--- a/src/main/resources/public/assets/css/formDesigner.css
+++ b/src/main/resources/public/assets/css/formDesigner.css
@@ -84,7 +84,7 @@ input, button, select, optgroup, textarea {
   --data-color: "";
 }
 
-/* _alignments.scss
+/* _alignments.scss 
  *
  * 파일 경로 : template/utilities/_alignments.scss
  * @description 정렬, 배치 관련 디자인
@@ -2132,9 +2132,9 @@ label {
   left: 0;
   width: 0.75rem;
   height: 0.375rem;
-  border-bottom: 0.125rem solid #0098FF;
+  border-bottom: 0.125rem solid #339AF0;
   border-top: none;
-  border-left: 0.125rem solid #0098FF;
+  border-left: 0.125rem solid #339AF0;
   border-right: none;
   border-radius: 0.125rem;
   -webkit-border-radius: 0.125rem;
