#11002 Radio button 디자인 적용

--- a/src/main/resources/public/scss/formDesigner/_elements.scss
+++ b/src/main/resources/public/scss/formDesigner/_elements.scss
@@ -45,7 +45,7 @@
 
     &:checked {
       + span {
-        background-color: $element-checked-bg-color;
+        background-color: $element-checked-color;
 
         &::before {
           @include translate(1.25rem, 0); // 20px
