--- a/src/main/resources/public/scss/template/_elements.scss
+++ b/src/main/resources/public/scss/template/_elements.scss
@@ -140,105 +140,6 @@ label {
   font-size: $label-font-size;
   font-weight: $label-font-weight;
 }
-// radio button
-.radio {
-  @include relative();
-  font-family: inherit;
-  font-size: $element-font-size;
-  font-weight: $element-font-weight;
-  color: $element-font-color;
-  outline: none;
-
-  > span:first-of-type {
-    padding-right: $element-indent;
-  }
-
-  input[type=radio] {
-    display: none;
-    // ⓞ 로 사용될 span
-    + span {
-      @include relative();
-
-      &::before { // 테두리로 사용되는 큰 원
-        content: '';
-        @include relative($top: -0.0625rem); // -1px
-        display: inline-block;
-        width: 1.125rem; // 18px
-        height: 1.125rem; // 18px
-        background-color: $element-bg-color;
-        @include border($element-border-width, solid, $element-border-color, all);
-        @include borderRadius(50%);
-        vertical-align: middle;
-        text-align: center;
-      }
-
-      &::after { // 선택시 작은 원
-        content: '';
-        @include absolute($top: 0, $left: 0);
-        width: 0.625rem; // 10px
-        height: 0.625rem; // 10px
-        background-color: transparent;
-        @include borderRadius(50%);
-      }
-    }
-
-    &:not(:disabled) {
-      + span { cursor: pointer; }
-      ~ .label { cursor: pointer; }
-
-      &:checked {
-        + span {
-          &::before {
-            border-color: $element-border-color;
-          }
-          &::after {
-            background-color: $element-checked-bg-color;
-            @include transform(translate(4px, 9px) scale(1)); // 4px, 9px
-          }
-        }
-      }
-
-      &:hover {
-        + span {
-          &::before {
-            border-color: $element-hover-border-color;
-            @include boxShadow(0, 0, 0.3125rem, 0, hexToRGBA($blue, 0.2)); // 5px
-          }
-        }
-      }
-    }
-
-    &:disabled {
-      + span {
-        &::before {
-          border-color: $element-disabled-border-color;
-          background-color: $element-disabled-bg-color;
-        }
-      }
-      ~ .label {
-        color: $element-disabled-font-color;
-      }
-      &:checked {
-        + span {
-          &::after {
-            background-color: $element-disabled-font-color;
-            @include transform(translate(4px, 9px) scale(1)); // 4px, 9px
-          }
-        }
-      }
-    }
-  }
-
-  &:focus {
-    input[type=radio]:not(:disabled) {
-      + span {
-        &:before {
-          border-color: $element-focus-border-color;
-        }
-      }
-    }
-  }
-}
 // switch
 .switch {
   @include relative();
@@ -281,7 +182,7 @@ label {
 
     &:checked {
       + span {
-        background-color: $element-checked-bg-color;
+        background-color: $element-checked-color;
 
         &::before {
           @include translate(2.875rem, 0); // 46px
@@ -867,8 +768,8 @@ label {
             @include absolute($top: 0.125rem, $left: 0); // 2px
             width: 0.75rem; // 12px
             height: 0.375rem; // 6px
-            @include border(0.125rem, solid, $element-checked-bg-color, bottom, top);
-            @include border(0.125rem, solid, $element-checked-bg-color, left, right);
+            @include border(0.125rem, solid, $element-checked-color, bottom, top);
+            @include border(0.125rem, solid, $element-checked-color, left, right);
             @include borderRadius(0.125rem); // 2px
             @include transform(translate(0.1875rem, 0.25rem) rotate(-45deg)); // 3px, 4px
           }
@@ -918,7 +819,123 @@ label {
           background-color: $element-active-bg-color;
         }
         &:after {
+          border-color: $element-checked-active-color;
+        }
+      }
+    }
+  }
+}
+
+// radio button
+.#{$common-prefix}radio {
+  @include relative();
+  font-family: inherit;
+  font-size: $element-font-size;
+  font-weight: $element-font-weight;
+  color: $element-font-color;
+  outline: none;
+
+  > span:first-of-type {
+    padding-right: $radio-indent;
+  }
+
+  input[type=radio] {
+    display: none;
+    // ⓞ 로 사용될 span
+    + span {
+      @include relative();
+
+      &::before { // 테두리로 사용되는 큰 원
+        content: '';
+        @include relative($top: -0.0625rem); // -1px
+        display: inline-block;
+        width: $radio-border-size;
+        height: $radio-border-size;
+        background-color: $element-bg-color;
+        @include border($element-border-width, solid, $element-border-color, all);
+        @include borderRadius(50%);
+        vertical-align: middle;
+        text-align: center;
+      }
+
+      &::after { // 선택시 작은 원
+        content: '';
+        @include absolute($top: -0.1875rem, $left: 0); // top: -3px
+        width: $radio-inner-size;
+        height: $radio-inner-size;
+        background-color: transparent;
+        @include borderRadius(50%);
+      }
+    }
+
+    &:not(:disabled) {
+      + span { cursor: pointer; }
+      ~ .label { cursor: pointer; }
+
+      &:checked {
+        + span {
+          &::before {
+            border-color: $element-border-color;
+          }
+          &::after {
+            background-color: $element-checked-color;
+            @include transform(translate(4px, 9px) scale(1)); // 4px, 9px
+          }
+        }
+      }
+
+      &:hover {
+        + span {
+          &::before {
+            border-color: $element-hover-border-color;
+            background-color: $element-hover-bg-color;
+          }
+        }
+      }
+    }
+
+    &:disabled {
+      + span {
+        &::before {
+          border-color: $element-disabled-border-color;
+          background-color: $element-disabled-bg-color;
+        }
+      }
+      ~ .label {
+        color: $element-disabled-font-color;
+      }
+      &:checked {
+        + span {
+          &::after {
+            background-color: $element-disabled-font-color;
+            @include transform(translate(4px, 9px) scale(1)); // 4px, 9px
+          }
+        }
+      }
+    }
+  }
+
+  &:focus {
+    input[type=radio]:not(:disabled) {
+      + span {
+        &:before {
+          border-color: $element-focus-border-color;
+
+          @include boxShadow(0, 0, 0.125rem, 0, $element-focus-border-color); // 2px
+        }
+      }
+    }
+  }
+  &:active {
+    input[type=radio]:not(:disabled) {
+      + span {
+        &:before {
           border-color: $element-active-border-color;
+          background-color: $element-active-bg-color;
+        }
+        &::after {
+          background-color: $element-checked-active-color;
+          @include transform(translate(4px, 9px) scale(1)); // 4px, 9px
         }
       }
     }
