--- a/src/main/resources/public/assets/theme/default/css/itsm.css
+++ b/src/main/resources/public/assets/theme/default/css/itsm.css
@@ -894,92 +894,6 @@ label {
   font-weight: 500;
 }
 
-.radio {
-  position: relative;
-  font-family: inherit;
-  font-size: 0.875rem;
-  font-weight: 400;
-  color: #222529;
-  outline: none;
-}
-.radio > span:first-of-type {
-  padding-right: 1rem;
-}
-.radio input[type=radio] {
-  display: none;
-}
-.radio input[type=radio] + span {
-  position: relative;
-}
-.radio input[type=radio] + span::before {
-  content: "";
-  position: relative;
-  top: -0.0625rem;
-  display: inline-block;
-  width: 1.125rem;
-  height: 1.125rem;
-  background-color: #FFFFFF;
-  border: 0.0625rem solid #CFD5D9;
-  border-radius: 50%;
-  -webkit-border-radius: 50%;
-  -moz-border-radius: 50%;
-  vertical-align: middle;
-  text-align: center;
-}
-.radio input[type=radio] + span::after {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 0.625rem;
-  height: 0.625rem;
-  background-color: transparent;
-  border-radius: 50%;
-  -webkit-border-radius: 50%;
-  -moz-border-radius: 50%;
-}
-.radio input[type=radio]:not(:disabled) + span {
-  cursor: pointer;
-}
-.radio input[type=radio]:not(:disabled) ~ .label {
-  cursor: pointer;
-}
-.radio input[type=radio]:not(:disabled):checked + span::before {
-  border-color: #CFD5D9;
-}
-.radio input[type=radio]:not(:disabled):checked + span::after {
-  background-color: #339AF0;
-  -webkit-transform: translate(4px, 9px) scale(1);
-  -moz-transform: translate(4px, 9px) scale(1);
-  -o-transform: translate(4px, 9px) scale(1);
-  -ms-transform: translate(4px, 9px) scale(1);
-  transform: translate(4px, 9px) scale(1);
-}
-.radio input[type=radio]:not(:disabled):hover + span::before {
-  border-color: #64BBF6;
-  -webkit-box-shadow: 0 0 0.3125rem 0 rgba(0, 152, 255, 0.2);
-  -moz-box-shadow: 0 0 0.3125rem 0 rgba(0, 152, 255, 0.2);
-  box-shadow: 0 0 0.3125rem 0 rgba(0, 152, 255, 0.2);
-}
-.radio input[type=radio]:disabled + span::before {
-  border-color: #CFD5D9;
-  background-color: #EEEEEE;
-}
-.radio input[type=radio]:disabled ~ .label {
-  color: #ABB0B5;
-}
-.radio input[type=radio]:disabled:checked + span::after {
-  background-color: #ABB0B5;
-  -webkit-transform: translate(4px, 9px) scale(1);
-  -moz-transform: translate(4px, 9px) scale(1);
-  -o-transform: translate(4px, 9px) scale(1);
-  -ms-transform: translate(4px, 9px) scale(1);
-  transform: translate(4px, 9px) scale(1);
-}
-.radio:focus input[type=radio]:not(:disabled) + span:before {
-  border-color: #2578CE;
-}
-
 .switch {
   position: relative;
   height: 2.188rem;
@@ -1679,7 +1593,106 @@ label {
   background-color: #ADE6FD;
 }
 .z-checkbox:active input[type=checkbox]:not(:disabled) + span:after {
+  border-color: #1959AC;
+}
+
+.z-radio {
+  position: relative;
+  font-family: inherit;
+  font-size: 0.875rem;
+  font-weight: 400;
+  color: #222529;
+  outline: none;
+}
+.z-radio > span:first-of-type {
+  padding-right: 0.5rem;
+}
+.z-radio input[type=radio] {
+  display: none;
+}
+.z-radio input[type=radio] + span {
+  position: relative;
+}
+.z-radio input[type=radio] + span::before {
+  content: "";
+  position: relative;
+  top: -0.0625rem;
+  display: inline-block;
+  width: 1.125rem;
+  height: 1.125rem;
+  background-color: #FFFFFF;
+  border: 0.0625rem solid #CFD5D9;
+  border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  vertical-align: middle;
+  text-align: center;
+}
+.z-radio input[type=radio] + span::after {
+  content: "";
+  position: absolute;
+  top: -0.1875rem;
+  left: 0;
+  width: 0.625rem;
+  height: 0.625rem;
+  background-color: transparent;
+  border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+}
+.z-radio input[type=radio]:not(:disabled) + span {
+  cursor: pointer;
+}
+.z-radio input[type=radio]:not(:disabled) ~ .label {
+  cursor: pointer;
+}
+.z-radio input[type=radio]:not(:disabled):checked + span::before {
+  border-color: #CFD5D9;
+}
+.z-radio input[type=radio]:not(:disabled):checked + span::after {
+  background-color: #339AF0;
+  -webkit-transform: translate(4px, 9px) scale(1);
+  -moz-transform: translate(4px, 9px) scale(1);
+  -o-transform: translate(4px, 9px) scale(1);
+  -ms-transform: translate(4px, 9px) scale(1);
+  transform: translate(4px, 9px) scale(1);
+}
+.z-radio input[type=radio]:not(:disabled):hover + span::before {
+  border-color: #64BBF6;
+  background-color: rgba(0, 152, 255, 0.08);
+}
+.z-radio input[type=radio]:disabled + span::before {
+  border-color: #CFD5D9;
+  background-color: #EEEEEE;
+}
+.z-radio input[type=radio]:disabled ~ .label {
+  color: #ABB0B5;
+}
+.z-radio input[type=radio]:disabled:checked + span::after {
+  background-color: #ABB0B5;
+  -webkit-transform: translate(4px, 9px) scale(1);
+  -moz-transform: translate(4px, 9px) scale(1);
+  -o-transform: translate(4px, 9px) scale(1);
+  -ms-transform: translate(4px, 9px) scale(1);
+  transform: translate(4px, 9px) scale(1);
+}
+.z-radio:focus input[type=radio]:not(:disabled) + span:before {
   border-color: #2578CE;
+  -webkit-box-shadow: 0 0 0.125rem 0 #2578CE;
+  -moz-box-shadow: 0 0 0.125rem 0 #2578CE;
+  box-shadow: 0 0 0.125rem 0 #2578CE;
+}
+.z-radio:active input[type=radio]:not(:disabled) + span:before {
+  border-color: #2578CE;
+  background-color: #ADE6FD;
+}
+.z-radio:active input[type=radio]:not(:disabled) + span::after {
+  background-color: #1959AC;
+  -webkit-transform: translate(4px, 9px) scale(1);
+  -moz-transform: translate(4px, 9px) scale(1);
+  -o-transform: translate(4px, 9px) scale(1);
+  -ms-transform: translate(4px, 9px) scale(1);
+  transform: translate(4px, 9px) scale(1);
 }
 
 h6 {
