--- a/src/main/resources/public/template/custom-code/customCodePopup.html
+++ b/src/main/resources/public/template/custom-code/customCodePopup.html
@@ -24,7 +24,7 @@
             <div class="radio-list">
                 <ul>
                     <li class="mt-3" th:unless="${#arrays.isEmpty(customCodeDataList)}" th:each="customCode: ${customCodeDataList}">
-                        <label class="radio" th:for="${customCode.key}" tabindex="0">
+                        <label class="z-radio" th:for="${customCode.key}" tabindex="0">
                             <input type="radio" name="customCode" th:id="${customCode.key}" th:value="${customCode.value}"/>
                             <span></span>
                             <span class="label" th:text="${customCode.value}"></span>
