--- a/src/main/resources/public/template/custom-code/customCodeView.html
+++ b/src/main/resources/public/template/custom-code/customCodeView.html
@@ -29,14 +29,14 @@
                     <span class="required"></span>
                 </label>
                 <div class="flex-row mr-auto">
-                    <label class="radio mr-4" for="table" tabindex="0">
+                    <label class="z-radio mr-4" for="table" tabindex="0">
                         <input id="table" name="type" type="radio"
                                th:checked="${customCode?.type == null || customCode?.type == 'table'}"
                                onclick="changeContainer('table')" disabled>
                         <span></span>
                         <span class="label" th:text="#{customCode.label.table}"></span>
                     </label>
-                    <label class="radio" for="code" tabindex="0">
+                    <label class="z-radio" for="code" tabindex="0">
                         <input id="code" name="type" type="radio"
                                th:checked="${customCode?.type == 'code'}" disabled>
                         <span></span>
