--- a/src/main/resources/public/template/numbering-pattern/numberingPatternEdit.html
+++ b/src/main/resources/public/template/numbering-pattern/numberingPatternEdit.html
@@ -40,19 +40,19 @@
                 <div class="edit-row flex-column">
                     <label th:text="#{pattern.label.type}" class="required"></label>
                     <div class="flex-row mr-auto">
-                        <label class="radio mr-4">
+                        <label class="z-radio mr-4">
                             <input id="numbering.pattern.text" name="patternType" type="radio"
                                    onclick="changePatternValueInput('numbering.pattern.text')">
                             <span></span>
                             <span class="label" th:text="#{pattern.type.text}"></span>
                         </label>
-                        <label class="radio mr-4">
+                        <label class="z-radio mr-4">
                             <input id="numbering.pattern.date" name="patternType" type="radio"
                                    onclick="changePatternValueInput('numbering.pattern.date')">
                             <span></span>
                             <span class="label" th:text="#{pattern.type.date}"></span>
                         </label>
-                        <label class="radio">
+                        <label class="z-radio">
                             <input id="numbering.pattern.sequence" name="patternType" type="radio"
                                    onclick="changePatternValueInput('numbering.pattern.sequence')">
                             <span></span>
