#10896 SCSS - text editor

--- a/src/main/resources/public/scss/formDesigner/_form.scss
+++ b/src/main/resources/public/scss/formDesigner/_form.scss
@@ -4,7 +4,7 @@
   display: inline-block;
   min-height: $form-min-height;
   background-color: $form-bg-color;
-  @include border(0.0625rem, solid, map-get($grays, "line"), all); // 1px
+  @include border(0.0625rem, solid, map-get($grays, 'line'), all); // 1px
   box-shadow: $form-box-shadow;
   & *:focus { outline: none !important; }
 }
@@ -183,7 +183,9 @@
     }
     // text editor
     .#{$common-prefix}text-editor {
-      height: calc(2.5rem * var(--data-row)); // quill editor 높이 : 40 * row 갯수
+      .ql-editor {
+        height: calc(2.5rem * var(--data-row)); // quill editor 높이 : 40 * row 갯수
+      }
     }
     // radio , checkbox
     .radio, .checkbox {
