--- a/src/main/resources/public/assets/css/formDesigner.css
+++ b/src/main/resources/public/assets/css/formDesigner.css
@@ -3687,6 +3687,10 @@ label {
   left: -0.125rem;
 }
 
+.ql-container .ql-editor {
+  resize: vertical;
+  overflow: auto;
+}
 .ql-container .ql-editor::-webkit-scrollbar-track {
   background-color: rgba(235, 235, 235, 0.6);
   border-radius: 0.5rem;
@@ -3708,6 +3712,17 @@ label {
 }
 .ql-container .ql-editor::-webkit-scrollbar-thumb:active {
   background-color: #CCCED1;
+}
+.ql-container .ql-editor::-webkit-resizer {
+  width: 24px;
+  height: 24px;
+  background-color: transparent;
+  border: none;
+  background-image: url("../media/icons/icon_resize.svg");
+  background-size: 12px;
+  background-repeat: no-repeat;
+  background-position-x: 0;
+  background-position-y: 0;
 }
 
 /* _file-uploader.scss 
@@ -4502,73 +4517,75 @@ label {
  * @author wdj
  * @version 1.0
  */
-.ql-toolbar *:focus {
+.ql-wrapper-container {
+  background-color: #FFFFFF;
+}
+.ql-wrapper-container .ql-toolbar *:focus {
   outline: none !important;
 }
-.ql-toolbar.ql-snow {
-  font-family: "Noto Sans KR", "맑은고딕", "Malgun Gothic", dotum, gulim, sans-serif;
-  border: 0.0625rem solid #EBEBEB;
-  background-color: #FFFFFF;
+.ql-wrapper-container .ql-toolbar.ql-snow {
+  font-family: "맑은고딕", "Malgun Gothic", "Noto Sans KR", dotum, gulim, sans-serif;
+  border: 0.0625rem solid #CFD5D9;
   padding: 0;
 }
-.ql-toolbar.ql-snow .ql-formats {
+.ql-wrapper-container .ql-toolbar.ql-snow .ql-formats {
   margin: 0;
   padding: 0;
 }
-.ql-toolbar.ql-snow .ql-formats .ql-picker-label,
-.ql-toolbar.ql-snow .ql-formats .ql-picker-item {
-  font-size: 0.875rem;
-  font-weight: 500;
-  color: #3F4B56;
+.ql-wrapper-container .ql-toolbar.ql-snow .ql-formats .ql-picker-label.ql-active,
+.ql-wrapper-container .ql-toolbar.ql-snow .ql-formats .ql-picker-item.ql-active {
+  color: #222529;
 }
-.ql-toolbar.ql-snow .ql-formats .ql-picker-label.ql-active,
-.ql-toolbar.ql-snow .ql-formats .ql-picker-item.ql-active {
-  color: #3F4B56;
-}
-.ql-toolbar.ql-snow .ql-formats .ql-header {
+.ql-wrapper-container .ql-toolbar.ql-snow .ql-formats .ql-header {
   width: 7.5rem;
-  height: 2.5rem;
+  height: 2.25rem;
 }
-.ql-toolbar.ql-snow .ql-formats .ql-header .ql-picker-label,
-.ql-toolbar.ql-snow .ql-formats .ql-header .ql-picker-item {
+.ql-wrapper-container .ql-toolbar.ql-snow .ql-formats .ql-header .ql-picker-label,
+.ql-wrapper-container .ql-toolbar.ql-snow .ql-formats .ql-header .ql-picker-item {
   padding: 0.4375rem 0.75rem;
 }
-.ql-toolbar.ql-snow .ql-formats .ql-header .ql-picker-label:not(.ql-color-picker):not(.ql-icon-picker) svg,
-.ql-toolbar.ql-snow .ql-formats .ql-header .ql-picker-item:not(.ql-color-picker):not(.ql-icon-picker) svg {
+.ql-wrapper-container .ql-toolbar.ql-snow .ql-formats .ql-header .ql-picker-label:not(.ql-color-picker):not(.ql-icon-picker) svg,
+.ql-wrapper-container .ql-toolbar.ql-snow .ql-formats .ql-header .ql-picker-item:not(.ql-color-picker):not(.ql-icon-picker) svg {
   margin: auto;
   right: 4%;
   top: 40%;
 }
-.ql-toolbar.ql-snow .ql-formats .ql-header .ql-picker-label:hover, .ql-toolbar.ql-snow .ql-formats .ql-header .ql-picker-label:focus,
-.ql-toolbar.ql-snow .ql-formats .ql-header .ql-picker-item:hover,
-.ql-toolbar.ql-snow .ql-formats .ql-header .ql-picker-item:focus {
-  color: #3F4B56;
-  background-color: #EBEBEB;
+.ql-wrapper-container .ql-toolbar.ql-snow .ql-formats .ql-header .ql-picker-label:hover,
+.ql-wrapper-container .ql-toolbar.ql-snow .ql-formats .ql-header .ql-picker-item:hover {
+  background-color: rgba(0, 152, 255, 0.08);
 }
-.ql-toolbar.ql-snow .ql-formats .ql-header .ql-picker-options {
+.ql-wrapper-container .ql-toolbar.ql-snow .ql-formats .ql-header .ql-picker-label:focus,
+.ql-wrapper-container .ql-toolbar.ql-snow .ql-formats .ql-header .ql-picker-item:focus {
+  color: #1959AC;
+  border-color: #2578CE;
+  -webkit-box-shadow: 0 0 0.125rem 0 #2578CE;
+  -moz-box-shadow: 0 0 0.125rem 0 #2578CE;
+  box-shadow: 0 0 0.125rem 0 #2578CE;
+}
+.ql-wrapper-container .ql-toolbar.ql-snow .ql-formats .ql-header .ql-picker-options {
   padding: 0;
-  -webkit-box-shadow: 0 0 0.3125rem 0 #EBEBEB;
-  -moz-box-shadow: 0 0 0.3125rem 0 #EBEBEB;
-  box-shadow: 0 0 0.3125rem 0 #EBEBEB;
+  -webkit-box-shadow: 0 0.125rem 0.75rem 0 #CFD5D9;
+  -moz-box-shadow: 0 0.125rem 0.75rem 0 #CFD5D9;
+  box-shadow: 0 0.125rem 0.75rem 0 #CFD5D9;
 }
-.ql-toolbar.ql-snow .ql-formats .ql-header .ql-picker-options .ql-picker-item[data-value="1"]::before {
+.ql-wrapper-container .ql-toolbar.ql-snow .ql-formats .ql-header .ql-picker-options .ql-picker-item[data-value="1"]::before {
   font-size: 2em;
 }
-.ql-toolbar.ql-snow .ql-formats .ql-header .ql-picker-options .ql-picker-item[data-value="2"]::before {
+.ql-wrapper-container .ql-toolbar.ql-snow .ql-formats .ql-header .ql-picker-options .ql-picker-item[data-value="2"]::before {
   font-size: 1.5em;
 }
-.ql-toolbar.ql-snow .ql-formats .ql-header .ql-picker-options .ql-picker-item[data-value="3"]::before {
+.ql-wrapper-container .ql-toolbar.ql-snow .ql-formats .ql-header .ql-picker-options .ql-picker-item[data-value="3"]::before {
   font-size: 1.17em;
 }
-.ql-toolbar.ql-snow .ql-formats .ql-header .ql-picker-options .ql-picker-item[data-value="4"]::before {
+.ql-wrapper-container .ql-toolbar.ql-snow .ql-formats .ql-header .ql-picker-options .ql-picker-item[data-value="4"]::before {
   font-size: 0.83em;
 }
-.ql-toolbar.ql-snow .ql-formats .ql-header.ql-expanded .ql-picker-label {
+.ql-wrapper-container .ql-toolbar.ql-snow .ql-formats .ql-header.ql-expanded .ql-picker-label {
   border-color: transparent;
-  color: #3F4B56;
-  background-color: #EBEBEB;
+  color: #1959AC;
+  background-color: #ADE6FD;
 }
-.ql-toolbar.ql-snow .ql-formats .ql-header.ql-expanded .ql-picker-label svg {
+.ql-wrapper-container .ql-toolbar.ql-snow .ql-formats .ql-header.ql-expanded .ql-picker-label svg {
   -webkit-transform: rotate(180deg);
   -moz-transform: rotate(180deg);
   -o-transform: rotate(180deg);
@@ -4580,163 +4597,169 @@ label {
   -ms-transform-origin: 50% 50%;
   transform-origin: 50% 50%;
 }
-.ql-toolbar.ql-snow .ql-formats .ql-header.ql-expanded .ql-picker-options {
+.ql-wrapper-container .ql-toolbar.ql-snow .ql-formats .ql-header.ql-expanded .ql-picker-options {
   margin-left: -0.0625rem;
-  border-color: #EBEBEB;
+  border-color: #CFD5D9;
 }
-.ql-toolbar.ql-snow .ql-formats .ql-header.ql-expanded .ql-picker-options .ql-picker-item.ql-selected {
-  color: #0098FF;
+.ql-wrapper-container .ql-toolbar.ql-snow .ql-formats .ql-header.ql-expanded .ql-picker-options .ql-picker-item.ql-selected {
+  color: #339AF0;
 }
-.ql-toolbar.ql-snow .ql-formats .ql-color-picker {
-  width: 2.813rem;
-  height: 2.5rem;
+.ql-wrapper-container .ql-toolbar.ql-snow .ql-formats .ql-color-picker {
+  width: 2.25rem;
+  height: 2.25rem;
 }
-.ql-toolbar.ql-snow .ql-formats .ql-color-picker .ql-picker-label {
-  padding: 0.5625rem 0.6875rem;
+.ql-wrapper-container .ql-toolbar.ql-snow .ql-formats .ql-color-picker .ql-picker-label {
+  padding: 0.3125rem;
 }
-.ql-toolbar.ql-snow .ql-formats .ql-color-picker .ql-picker-label svg .ql-transparent {
+.ql-wrapper-container .ql-toolbar.ql-snow .ql-formats .ql-color-picker .ql-picker-label svg .ql-transparent {
   opacity: 1;
 }
-.ql-toolbar.ql-snow .ql-formats .ql-color-picker .ql-picker-label svg .ql-label,
-.ql-toolbar.ql-snow .ql-formats .ql-color-picker .ql-picker-label svg .bg-line {
-  fill: #3F4B56;
+.ql-wrapper-container .ql-toolbar.ql-snow .ql-formats .ql-color-picker .ql-picker-label svg .ql-label,
+.ql-wrapper-container .ql-toolbar.ql-snow .ql-formats .ql-color-picker .ql-picker-label svg .bg-line {
+  fill: #222529;
 }
-.ql-toolbar.ql-snow .ql-formats .ql-color-picker .ql-picker-label svg .bg {
+.ql-wrapper-container .ql-toolbar.ql-snow .ql-formats .ql-color-picker .ql-picker-label svg .bg {
   fill: #FFFFFF;
 }
-.ql-toolbar.ql-snow .ql-formats .ql-color-picker .ql-picker-label.ql-active[data-value]:not([data-value=""]) svg .ql-label {
+.ql-wrapper-container .ql-toolbar.ql-snow .ql-formats .ql-color-picker .ql-picker-label.ql-active[data-value]:not([data-value=""]) svg .ql-label {
   fill: #FFFFFF;
 }
-.ql-toolbar.ql-snow .ql-formats .ql-color-picker .ql-picker-label:hover, .ql-toolbar.ql-snow .ql-formats .ql-color-picker .ql-picker-label:focus {
-  color: #3F4B56;
-  background-color: #EBEBEB;
+.ql-wrapper-container .ql-toolbar.ql-snow .ql-formats .ql-color-picker .ql-picker-label:hover {
+  color: #222529;
+  background-color: rgba(0, 152, 255, 0.08);
 }
-.ql-toolbar.ql-snow .ql-formats .ql-color-picker .ql-picker-item:hover, .ql-toolbar.ql-snow .ql-formats .ql-color-picker .ql-picker-item:focus {
-  color: #3F4B56;
-  border-color: #0098FF;
+.ql-wrapper-container .ql-toolbar.ql-snow .ql-formats .ql-color-picker .ql-picker-label:focus {
+  color: #2578CE;
+  border-color: #2578CE;
+  -webkit-box-shadow: 0 0 0.125rem 0 #2578CE;
+  -moz-box-shadow: 0 0 0.125rem 0 #2578CE;
+  box-shadow: 0 0 0.125rem 0 #2578CE;
 }
-.ql-toolbar.ql-snow .ql-formats .ql-color-picker .ql-picker-options {
-  -webkit-box-shadow: 0 0 0.3125rem 0 #EBEBEB;
-  -moz-box-shadow: 0 0 0.3125rem 0 #EBEBEB;
-  box-shadow: 0 0 0.3125rem 0 #EBEBEB;
+.ql-wrapper-container .ql-toolbar.ql-snow .ql-formats .ql-color-picker .ql-picker-item:hover, .ql-wrapper-container .ql-toolbar.ql-snow .ql-formats .ql-color-picker .ql-picker-item:focus {
+  border-color: #339AF0;
 }
-.ql-toolbar.ql-snow .ql-formats .ql-color-picker.ql-expanded .ql-picker-label {
+.ql-wrapper-container .ql-toolbar.ql-snow .ql-formats .ql-color-picker .ql-picker-options {
+  -webkit-box-shadow: 0 0.125rem 0.75rem 0 #CFD5D9;
+  -moz-box-shadow: 0 0.125rem 0.75rem 0 #CFD5D9;
+  box-shadow: 0 0.125rem 0.75rem 0 #CFD5D9;
+}
+.ql-wrapper-container .ql-toolbar.ql-snow .ql-formats .ql-color-picker.ql-expanded .ql-picker-label {
   border-color: transparent;
-  color: #3F4B56;
-  background-color: #EBEBEB;
+  color: #1959AC;
+  background-color: #ADE6FD;
 }
-.ql-toolbar.ql-snow .ql-formats .ql-color-picker.ql-expanded .ql-picker-options {
+.ql-wrapper-container .ql-toolbar.ql-snow .ql-formats .ql-color-picker.ql-expanded .ql-picker-options {
   border-color: #FFFFFF;
 }
-.ql-toolbar.ql-snow .ql-formats .ql-color-picker.ql-expanded .ql-picker-options .ql-picker-item.ql-selected {
-  border-color: #0098FF;
+.ql-wrapper-container .ql-toolbar.ql-snow .ql-formats .ql-color-picker.ql-expanded .ql-picker-options .ql-picker-item.ql-selected {
+  border-color: #339AF0;
 }
-.ql-toolbar.ql-snow .ql-formats .ql-icon-picker {
-  width: 3.75rem;
-  height: 2.5rem;
-}
-.ql-toolbar.ql-snow .ql-formats .ql-icon-picker .ql-picker-label {
-  width: 3.75rem;
-  height: 2.5rem;
-  padding: 0.5625rem 0.6875rem;
-}
-.ql-toolbar.ql-snow .ql-formats .ql-icon-picker .ql-picker-label .ql-icon-arrow {
-  fill-opacity: 1;
-  -webkit-transform: translate(178px, -341px);
-  -moz-transform: translate(178px, -341px);
-  -o-transform: translate(178px, -341px);
-  -ms-transform: translate(178px, -341px);
-  transform: translate(178px, -341px);
-}
-.ql-toolbar.ql-snow .ql-formats .ql-icon-picker .ql-picker-label:hover, .ql-toolbar.ql-snow .ql-formats .ql-icon-picker .ql-picker-label:focus {
-  color: #3F4B56;
-  background-color: #EBEBEB;
-}
-.ql-toolbar.ql-snow .ql-formats .ql-icon-picker .ql-picker-item {
-  width: 2.813rem;
-  height: 2.5rem;
-  padding: 0.5625rem 0.6875rem;
-}
-.ql-toolbar.ql-snow .ql-formats .ql-icon-picker .ql-picker-item:hover, .ql-toolbar.ql-snow .ql-formats .ql-icon-picker .ql-picker-item:focus {
-  color: #3F4B56;
-  background-color: #EBEBEB;
-}
-.ql-toolbar.ql-snow .ql-formats .ql-icon-picker .ql-picker-options {
-  min-width: 2.813rem;
-  -webkit-box-shadow: 0 0 0.3125rem 0 #EBEBEB;
-  -moz-box-shadow: 0 0 0.3125rem 0 #EBEBEB;
-  box-shadow: 0 0 0.3125rem 0 #EBEBEB;
-  padding: 0;
-}
-.ql-toolbar.ql-snow .ql-formats .ql-icon-picker .ql-picker-options .ql-icon-arrow {
-  fill-opacity: 0;
-}
-.ql-toolbar.ql-snow .ql-formats .ql-icon-picker.ql-expanded .ql-picker-label {
-  border-color: transparent;
-  color: #3F4B56;
-  background-color: #EBEBEB;
-}
-.ql-toolbar.ql-snow .ql-formats .ql-icon-picker.ql-expanded .ql-picker-label .ql-icon-arrow {
-  fill-opacity: 1;
-  -webkit-transform: translate(568px, 439px) rotate(180deg);
-  -moz-transform: translate(568px, 439px) rotate(180deg);
-  -o-transform: translate(568px, 439px) rotate(180deg);
-  -ms-transform: translate(568px, 439px) rotate(180deg);
-  transform: translate(568px, 439px) rotate(180deg);
-}
-.ql-toolbar.ql-snow .ql-formats .ql-icon-picker.ql-expanded .ql-picker-options {
-  margin-left: -0.0625rem;
-  border-color: #EBEBEB;
-}
-.ql-toolbar.ql-snow .ql-formats .ql-icon-picker.ql-expanded .ql-picker-options .ql-picker-item.ql-selected svg {
-  fill: #0098FF;
-}
-.ql-toolbar.ql-snow .ql-formats .ql-icon-picker.ql-expanded .ql-picker-options .ql-picker-item .ql-icon-arrow {
-  fill-opacity: 0;
-}
-.ql-toolbar.ql-snow .ql-formats button {
-  width: 2.813rem;
-  height: 2.5rem;
+.ql-wrapper-container .ql-toolbar.ql-snow .ql-formats button {
+  position: relative;
+  width: 2.25rem;
+  height: 2.25rem;
   padding: 0;
   margin: 0;
   border-radius: 0;
   -webkit-border-radius: 0;
   -moz-border-radius: 0;
 }
-.ql-toolbar.ql-snow .ql-formats button svg {
+.ql-wrapper-container .ql-toolbar.ql-snow .ql-formats button svg {
   float: initial;
 }
-.ql-toolbar.ql-snow .ql-formats button:hover, .ql-toolbar.ql-snow .ql-formats button:focus, .ql-toolbar.ql-snow .ql-formats button.ql-active {
-  color: #3F4B56;
-  background-color: #EBEBEB;
+.ql-wrapper-container .ql-toolbar.ql-snow .ql-formats button:after {
+  content: "";
+  display: block;
+  position: absolute;
+  width: 0.5rem;
+  height: 0.5rem;
+  bottom: -4px;
+  left: calc(50% - 0.25rem);
+  background: transparent;
+  border-radius: 100%;
 }
-
-.ql-container.ql-snow {
-  font-family: "Noto Sans KR", "맑은고딕", "Malgun Gothic", dotum, gulim, sans-serif;
+.ql-wrapper-container .ql-toolbar.ql-snow .ql-formats button:hover {
+  color: #222529;
+  background-color: rgba(0, 152, 255, 0.08);
+}
+.ql-wrapper-container .ql-toolbar.ql-snow .ql-formats button:focus {
+  color: #2578CE;
+  border-color: #2578CE;
+  -webkit-box-shadow: 0 0 0.125rem 0 #2578CE;
+  -moz-box-shadow: 0 0 0.125rem 0 #2578CE;
+  box-shadow: 0 0 0.125rem 0 #2578CE;
+}
+.ql-wrapper-container .ql-toolbar.ql-snow .ql-formats button:focus .ql-icon {
+  fill: #2578CE;
+}
+.ql-wrapper-container .ql-toolbar.ql-snow .ql-formats button:enabled:active, .ql-wrapper-container .ql-toolbar.ql-snow .ql-formats button:enabled.active {
+  color: #1959AC;
+  background-color: #ADE6FD;
+}
+.ql-wrapper-container .ql-toolbar.ql-snow .ql-formats button:enabled:active .ql-icon, .ql-wrapper-container .ql-toolbar.ql-snow .ql-formats button:enabled.active .ql-icon {
+  fill: #1959AC;
+}
+.ql-wrapper-container .ql-toolbar.ql-snow .ql-formats button.ql-active {
+  color: #339AF0;
+}
+.ql-wrapper-container .ql-toolbar.ql-snow .ql-formats button.ql-active .ql-icon {
+  fill: #339AF0;
+}
+.ql-wrapper-container .ql-toolbar.ql-snow .ql-formats button.ql-active:after {
+  background: #339AF0;
+}
+.ql-wrapper-container .ql-toolbar-hidden {
+  display: none;
+}
+.ql-wrapper-container .ql-container.ql-snow {
+  font-family: "맑은고딕", "Malgun Gothic", "Noto Sans KR", dotum, gulim, sans-serif;
   font-size: 0.875rem;
   font-weight: 400;
-  line-height: 1.5;
-  color: #586872;
-  border: 0.0625rem solid #EBEBEB;
-  background-color: #FFFFFF;
+  line-height: 1.2;
+  color: #222529;
+  border: 0.0625rem solid #CFD5D9;
 }
-.ql-container.ql-snow .ql-editor {
+.ql-wrapper-container .ql-container.ql-snow .ql-editor {
   padding: 0.625rem;
 }
-.ql-container.ql-snow .ql-editor .ql-blank::before {
+.ql-wrapper-container .ql-container.ql-snow .ql-editor .ql-blank::before {
   content: attr(data-placeholder);
 }
-.ql-container.ql-snow .ql-editor h1, .ql-container.ql-snow .ql-editor h2, .ql-container.ql-snow .ql-editor h3, .ql-container.ql-snow .ql-editor h4, .ql-container.ql-snow .ql-editor h5, .ql-container.ql-snow .ql-editor h6 {
+.ql-wrapper-container .ql-container.ql-snow .ql-editor h1, .ql-wrapper-container .ql-container.ql-snow .ql-editor h2, .ql-wrapper-container .ql-container.ql-snow .ql-editor h3, .ql-wrapper-container .ql-container.ql-snow .ql-editor h4, .ql-wrapper-container .ql-container.ql-snow .ql-editor h5, .ql-wrapper-container .ql-container.ql-snow .ql-editor h6 {
   line-height: 1.2;
 }
-.ql-container.ql-snow .ql-editor em {
+.ql-wrapper-container .ql-container.ql-snow .ql-editor em {
   font-style: italic;
 }
-.ql-container.ql-snow .ql-editor strong {
+.ql-wrapper-container .ql-container.ql-snow .ql-editor strong {
   font-weight: bold;
 }
-.ql-container.ql-border-disabled {
+.ql-wrapper-container.ql-border-disabled .ql-toolbar.ql-snow {
   border-color: transparent;
+}
+.ql-wrapper-container.ql-border-disabled .ql-container.ql-snow {
+  border-color: transparent;
+}
+.ql-wrapper-container:hover {
+  outline: 0;
+}
+.ql-wrapper-container:hover .ql-toolbar.ql-snow {
+  border-color: #64BBF6;
+}
+.ql-wrapper-container:hover .ql-container.ql-snow:not(.ql-disabled) {
+  border-color: #64BBF6;
+}
+.ql-wrapper-container:focus {
+  outline: 0;
+  -webkit-box-shadow: 0 0 0.125rem 0 #2578CE;
+  -moz-box-shadow: 0 0 0.125rem 0 #2578CE;
+  box-shadow: 0 0 0.125rem 0 #2578CE;
+}
+.ql-wrapper-container:focus .ql-toolbar.ql-snow {
+  border-color: #2578CE;
+}
+.ql-wrapper-container:focus .ql-container.ql-snow {
+  border-color: #2578CE;
 }
 
 .ql-container.error {
@@ -5011,31 +5034,6 @@ label {
 .z-color-picker-wrapper .z-color-picker-modal .z-custom-color-palette-container .z-custom-color-control-container .z-button-list {
   width: 100%;
   text-align: right;
-}
-
-.color-picker {
-  display: flex;
-  flex-direction: column;
-}
-.color-picker .color-input .selected-color {
-  width: 1.5rem;
-  height: 1.5rem;
-  margin: 0.3125rem;
-  border: 0.1875rem solid transparent;
-  cursor: pointer;
-}
-.color-picker .color-input .selected-color-box {
-  display: flex;
-  width: 2.25rem;
-  height: 2.25rem;
-  margin-right: 0.3125rem;
-  border: 0.0625rem solid #EBEBEB;
-}
-.color-picker .color-input .selected-color-box:hover {
-  border-color: #0098FF;
-}
-.color-picker .color-input .selected-color .input {
-  width: 6.25rem;
 }
 
 /* _modal.scss 
@@ -5753,7 +5751,7 @@ body.modal-active {
   width: 100%;
   height: calc(2.5rem * var(--data-row));
 }
-.z-component .z-element .z-text-editor {
+.z-component .z-element .z-text-editor .ql-editor {
   height: calc(2.5rem * var(--data-row));
 }
 .z-component .z-element .radio .vertical, .z-component .z-element .checkbox .vertical {
