--- a/src/main/resources/public/scss/template/_scrollbars.scss
+++ b/src/main/resources/public/scss/template/_scrollbars.scss
@@ -294,9 +294,11 @@
     }
   }
 }
-// text editor scrollbar
+// TODO: text editor scrollbar
 .ql-container {
   .ql-editor {
+    resize: vertical;
+    overflow: auto;
     // background of the scrollbar
     &::-webkit-scrollbar-track {
       background-color: $scrollbar-bg-color;
@@ -317,6 +319,14 @@
       &:active {
         background-color: $scrollbar-hover-color;
       }
+    }
+    // corner
+    &::-webkit-resizer {
+      width: 24px;
+      height: 24px;
+      background-color: transparent;
+      border: none;
+      @include backgroundImage('#{$icon-folder-path}icon_resize.svg', 12px, no-repeat, 0, 0, null);
     }
   }
 }
