#9818 제품 정보 출력 -> 구현 진행

--- a/src/main/resources/public/template/layout/menu.html
+++ b/src/main/resources/public/template/layout/menu.html
@@ -118,7 +118,7 @@
 	function openProductInfoModal() {
 		const opt = {
 			method: 'get',
-			url: '/rest/products/Info',
+			url: '/rest/products/info',
 			contentType: 'application/json',
 			showProgressbar: false,
 			callbackFunc: function (response) {
