--- a/src/main/resources/public/assets/theme/default/css/itsm.css
+++ b/src/main/resources/public/assets/theme/default/css/itsm.css
@@ -5362,6 +5362,7 @@ table[id=documentDisplay] td {
   display: none;
 }
 .ql-wrapper-container .ql-container.ql-snow {
+  height: auto;
   font-family: "맑은고딕", "Malgun Gothic", "Noto Sans KR", dotum, gulim, sans-serif;
   font-size: 0.875rem;
   font-weight: 400;
@@ -5370,6 +5371,7 @@ table[id=documentDisplay] td {
   border: 0.0625rem solid #CFD5D9;
 }
 .ql-wrapper-container .ql-container.ql-snow .ql-editor {
+  height: 7.5rem;
   padding: 0.625rem;
 }
 .ql-wrapper-container .ql-container.ql-snow .ql-editor .ql-blank::before {
