--- a/src/main/resources/public/assets/css/process.css
+++ b/src/main/resources/public/assets/css/process.css
@@ -1839,6 +1839,7 @@ label {
 }
 
 .z-checkbox {
+  margin-right: 0.5rem;
   font-family: "맑은고딕", "Malgun Gothic", "Noto Sans KR", dotum, gulim, sans-serif;
   font-size: 0.875rem;
   font-weight: 400;
@@ -1923,6 +1924,7 @@ label {
 
 .z-radio {
   position: relative;
+  margin-right: 0.5rem;
   font-family: "맑은고딕", "Malgun Gothic", "Noto Sans KR", dotum, gulim, sans-serif;
   font-size: 0.875rem;
   font-weight: 400;
@@ -1956,7 +1958,7 @@ label {
 .z-radio input[type=radio] + span::after {
   content: "";
   position: absolute;
-  top: -0.1875rem;
+  top: -0.225rem;
   left: 0;
   width: 0.625rem;
   height: 0.625rem;
