--- a/src/main/resources/public/assets/theme/default/css/itsm.css
+++ b/src/main/resources/public/assets/theme/default/css/itsm.css
@@ -1526,6 +1526,7 @@ label {
 }
 
 .z-checkbox {
+  margin-right: 0.5rem;
   font-family: "맑은고딕", "Malgun Gothic", "Noto Sans KR", dotum, gulim, sans-serif;
   font-size: 0.875rem;
   font-weight: 400;
@@ -1610,6 +1611,7 @@ label {
 
 .z-radio {
   position: relative;
+  margin-right: 0.5rem;
   font-family: "맑은고딕", "Malgun Gothic", "Noto Sans KR", dotum, gulim, sans-serif;
   font-size: 0.875rem;
   font-weight: 400;
@@ -1643,7 +1645,7 @@ label {
 .z-radio input[type=radio] + span::after {
   content: "";
   position: absolute;
-  top: -0.1875rem;
+  top: -0.225rem;
   left: 0;
   width: 0.625rem;
   height: 0.625rem;
