--- a/src/main/resources/public/scss/theme/default/_variables.scss
+++ b/src/main/resources/public/scss/theme/default/_variables.scss
@@ -148,7 +148,7 @@ $tooltip-contents-width:                      22.5rem; // 360px
 /////////////////////////// Notification ///////////////////////////
 // Notification 상단 알람
 $notification-icon-color:                     $gray500;
-$notification-icon-close-color:               $gray500;
+$notification-icon-close-color:               $white;
 
 $notification-panel-border-color:             $neutral200;
 $notification-panel-box-shadow-color:         $neutral200;
