--- a/src/main/resources/public/scss/formDesigner/_form.scss
+++ b/src/main/resources/public/scss/formDesigner/_form.scss
@@ -120,7 +120,6 @@
 }
 
 // component 툴팁
-// todo: 1 row 1 component 일 경우 dashed border 제거
 .#{$common-prefix}component-tooltip {
   position: relative;
   flex-basis: getFlexBasis(100%, 0px, $column-row, 0px);
@@ -129,6 +128,10 @@
   @include border(0.0625rem, dashed, #D7DBE0, all); // 1px
   @include borderRadius(0.0625rem); // 2px
   background-color: transparent;
+  // 1 row 1 component 일 경우 dashed border 제거
+  &:first-child:nth-last-child(1) {
+    @include border(0.0625rem, solid, #D7DBE0, all); // 1px
+  }
   // 컴포넌트 선택시
   &.selected {
     @include border(0.0625rem, solid, $component-selected-border-color, all); // 1px
@@ -148,6 +151,10 @@
   }
   // displayType이 hidden일 경우
   &.off { display: none; }
+  // 컴포넌트 드래그시 마진 제거 (디자인팀 요청사항)
+  &.sortable-ghost {
+    margin: 0;
+  }
 }
 // component
 .#{$common-prefix}component {
