--- a/src/main/resources/public/scss/formDesigner/_form.scss
+++ b/src/main/resources/public/scss/formDesigner/_form.scss
@@ -186,15 +186,15 @@
       height: calc(2.5rem * var(--data-row)); // quill editor 높이 : 40 * row 갯수
     }
     // radio , checkbox
-    .radio, .checkbox {
-      .vertical {
+    .#{$common-prefix}radio, .#{$common-prefix}checkbox {
+      &.vertical {
         display: block;
         margin-top: 0.625rem;
         &:first-of-type {
           margin-top: 0;
         }
       }
-      .horizontal {
+      &.horizontal {
         display: inline-block;
         margin-right: 0.625rem;
       }
