#10717 폼 디자이너 컴포넌트 드래그 시, 디자인 개선

--- a/src/main/resources/public/scss/formDesigner/_variables.scss
+++ b/src/main/resources/public/scss/formDesigner/_variables.scss
@@ -66,6 +66,7 @@ $component-icon: (
 // 컴포넌트 아이콘 > drag item (폼 내부에 나타나는 item)
 $component-icon-drag-bg-color:                     $blue100;
 $component-icon-drag-border-color:                 $blue400;
+$component-icon-drag-font-color:                   $blue400;
 
 // properties header
 $layout-properties-panel-header-height:            2.5rem; // 40px
