--- a/src/main/resources/public/assets/css/formDesigner.css
+++ b/src/main/resources/public/assets/css/formDesigner.css
@@ -1218,15 +1218,27 @@ input, button, select, optgroup, textarea {
 .z-drawing-board .z-component-icon-drag-in {
   display: inline-block;
   width: 100%;
-  height: 7.875rem;
+  height: auto;
   background-color: #E3F5FC;
   border: 0.0625rem dashed #64BBF6;
 }
 .z-drawing-board .z-component-icon-drag-in .z-icon {
-  opacity: 0;
+  display: none;
 }
 .z-drawing-board .z-component-icon-drag-in .z-component-name {
-  opacity: 0;
+  display: none;
+}
+.z-drawing-board .z-component-icon-drag-in .z-component-tooltip {
+  border-color: transparent;
+}
+.z-drawing-board .z-component-icon-drag-in .z-component-tooltip .z-component .z-component-label .z-component-label-text {
+  color: #64BBF6 !important;
+}
+.z-drawing-board .z-component-icon-drag-in .z-component-tooltip .z-component .z-element .z-input,
+.z-drawing-board .z-component-icon-drag-in .z-component-tooltip .z-component .z-element .z-textarea,
+.z-drawing-board .z-component-icon-drag-in .z-component-tooltip .z-component .z-element .ql-toolbar.ql-snow,
+.z-drawing-board .z-component-icon-drag-in .z-component-tooltip .z-component .z-element .ql-container.ql-snow {
+  border-color: #64BBF6 !important;
 }
 .z-drawing-board.edit .z-group-label {
   pointer-events: none;
